--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,10 +15,10 @@
 
             {%- include toc-date.html -%}
 
-            <div class="book-body">
-                <div class="book-header" role="navigation">
+            <div class="book-body" align="center">
+                <div class="book-header" role="navigation" align="center">
                     <!-- Title -->
-                    <h1>
+                    <h1 align="center">
                         <i class="fa fa-circle-o-notch fa-spin"></i>
                         {% if page.title %}
                             <a href="." >{{ page.title | escape }}</a>
