--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -6,7 +6,7 @@
         <div id="book-search-input-link" role="search">
             <a href="{{site.baseurl}}/assets/search.html">Click to Search</a>
         </div>
-        <ul class="summary">
+        <b><ul class="summary">
             {% if page.url == "/index.html" or page.url == "/" %}
             <li class="chapter active" data-level="1.1" data-path="{{site.baseurl}}">
             {% else %}
@@ -56,6 +56,6 @@
                     Fork it Now!
                 </a>
             </li> -->
-        </ul>
+        </ul></b>
     </nav>
 </div>
