--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -51,11 +51,10 @@
                 {% endif %}
             {% endfor %}
 
-            <!-- <li>
-                <a href="https://github.com/sighingnow/jekyll-gitbook/fork" target="blank" class="gitbook-link">
-                    Fork it Now!
-                </a>
-            </li> -->
+            <li>
+                <a> </a> <!-- đây là tạo khoảng trắng ở thanh tiêu đề khi quá dài để hiện thị-->
+                <a> </a>
+            </li>
         </ul></b>
     </nav>
 </div>
