--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -1,4 +1,4 @@
-{% capture tocWorkspace %}
+<tt>{% capture tocWorkspace %}
     {% comment %}
         Copyright (c) 2017 Vladimir "allejo" Jimenez
 
@@ -180,3 +180,4 @@
         {% endif %}
     {% endif %}
 {% endcapture %}{% assign tocWorkspace = '' %}{{ deprecation_warnings }}{{ jekyll_toc }}
+</tt>
