up writeup downunder task 2 3 4 and fix format code

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <meta charset="UTF-8">
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+<!-- <meta http-equiv="refresh" content="30" />  đây là reload lại trang tự động sau 30s-->
 
 {%- if page.title -%}
     <title>{{ page.title | escape }} · {{ site.title | escape }}</title>
