--- a/assets/gitbook/gitbook-plugin-fontsettings/website.css
+++ b/assets/gitbook/gitbook-plugin-fontsettings/website.css
@@ -108,7 +108,7 @@
 }
 .book.color-theme-1 .book-body .page-wrapper .page-inner section.normal pre,
 .book.color-theme-1 .book-body .page-wrapper .page-inner section.normal code {
-  background: #fdf6e3;
+  /* background: #fdf6e3; */
   color: #657b83;
   border-color: #f8df9c;
 }
@@ -157,7 +157,7 @@
 .book.color-theme-2 .book-body .page-wrapper .page-inner section.normal pre,
 .book.color-theme-2 .book-body .page-wrapper .page-inner section.normal code {
   color: #9dbed8;
-  background: #2d3143;
+  background: #282a39;
   border-color: #2d3143;
 }
 .book.color-theme-2 .book-body .page-wrapper .page-inner section.normal .highlight {
