--- a/assets/gitbook/rouge/github.css
+++ b/assets/gitbook/rouge/github.css
@@ -26,11 +26,11 @@
   background-color: #e3d2d2;
 }
 .highlight .gd {
-  color: #000000;
+  color: #1da1f2;
   background-color: #ffdddd;
 }
 .highlight .ge {
-  color: #000000;
+  color: #1da1f2;
   font-style: italic;
 }
 .highlight .gr {
@@ -40,7 +40,7 @@
   color: #999999;
 }
 .highlight .gi {
-  color: #000000;
+  color: #1da1f2;
   background-color: #ddffdd;
 }
 .highlight .go {
@@ -59,23 +59,23 @@
   color: #aa0000;
 }
 .highlight .kc {
-  color: #000000;
+  color: #1da1f2;
   font-weight: bold;
 }
 .highlight .kd {
-  color: #000000;
+  color: #1da1f2;
   font-weight: bold;
 }
 .highlight .kn {
-  color: #000000;
+  color: #1da1f2;
   font-weight: bold;
 }
 .highlight .kp {
-  color: #000000;
+  color: #1da1f2;
   font-weight: bold;
 }
 .highlight .kr {
-  color: #000000;
+  color: #1da1f2;
   font-weight: bold;
 }
 .highlight .kt {
@@ -83,7 +83,7 @@
   font-weight: bold;
 }
 .highlight .k, .highlight .kv {
-  color: #000000;
+  color: #1da1f2;
   font-weight: bold;
 }
 .highlight .mf {
@@ -105,7 +105,7 @@
   color: #009999;
 }
 .highlight .sa {
-  color: #000000;
+  color: #1da1f2;
   font-weight: bold;
 }
 .highlight .sb {
@@ -142,7 +142,7 @@
   color: #990073;
 }
 .highlight .s, .highlight .dl {
-  color: #d14;
+  color: #f93264;
 }
 .highlight .na {
   color: #008080;
@@ -198,11 +198,11 @@
   color: #008080;
 }
 .highlight .ow {
-  color: #000000;
+  color: #1da1f2;
   font-weight: bold;
 }
 .highlight .o {
-  color: #000000;
+  color: #1da1f2;
   font-weight: bold;
 }
 .highlight .w {
