--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,7 @@
 <link rel="stylesheet" href="{{site.baseurl}}/assets/gitbook/gitbook-plugin-fontsettings/website.css">
 <link rel="stylesheet" href="{{site.baseurl}}/assets/gitbook/gitbook-plugin-search-pro/search.css">
 <link rel="stylesheet" href="{{site.baseurl}}/assets/gitbook/gitbook-plugin-back-to-top-button/plugin.css">
-<link rel="shortcut icon" href="/assets/img/favicon.ico">
+<link rel="shortcut icon" href="/assets/img/favicon.png">
 <link rel="stylesheet" href="{{site.baseurl}}/assets/gitbook/rouge/{{ site.syntax_highlighter_style | default: 'colorful' }}.css">
 
 <link rel="stylesheet" href="{{site.baseurl}}/assets/gitbook/custom.css">
