--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -16,7 +16,9 @@
                     {{ site.title | escape }}
                 </a>
             </li>
-
+            <li>
+                <a href="https://blog.vietzettt.ru/home">🌸Blogs...👉</a> <!-- đây là tạo khoảng trắng ở thanh tiêu đề khi quá dài để hiện thị-->
+            </li>
             <li class="divider"></li>
 
             {% for collection in site.collections %}
@@ -52,8 +54,8 @@
             {% endfor %}
 
             <li>
-                <a> </a> <!-- đây là tạo khoảng trắng ở thanh tiêu đề khi quá dài để hiện thị-->
-                <a> </a>
+                <a></a> <!-- đây là tạo khoảng trắng ở thanh tiêu đề khi quá dài để hiện thị-->
+                <a></a>
             </li>
         </ul></b>
     </nav>
