fix link to blog

--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -17,7 +17,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://blog.vietzettt.ru/home">🌸Blogs...👉</a> <!-- đây là tạo khoảng trắng ở thanh tiêu đề khi quá dài để hiện thị-->
+                <a href="https://blog.vietzettt.ru/home" target="_blank">🌸Blogs...👉</a>
             </li>
             <li class="divider"></li>
 
