--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -17,7 +17,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://vietzettt.gitbook.io/home" target="_blank">🌸Blogs...👉</a>
+                <a href="https://blog.vietzettt.ru/home" target="_blank">🌸Blogs...👉</a>
             </li>
             <li class="divider"></li>
 
